Add timeOfContact column to contacts (#60)
* Added timeOfContact + accountSid

* Contacts search uses timeOfContact instead of createdAt

* Contacts sorted by timeOfContact
