# swagger.yaml
@@ -118,7 +118,82 @@ paths:
         '401':
           $ref: '#/components/responses/UnauthorizedError'
         '404':
-          description: Case not found
+          description: Case not found        
+  /contacts:
+    post:
+      tags:
+        - contacts
+      summary: create a new contact
+      operationId: createContact
+      parameters:
+        - name: rawJson
+          in: body
+          description: Raw contact form object
+          required: true
+          schema:
+            type: object
+            example: { "callType": {}, "callerInformation": {}, "childInformation": {}, "caseInformation": {} }
+        - name: queueName
+          in: body
+          description: Name of the queue where this contact was taken
+          schema:
+            type: string
+            example: Admin
+        - name: twilioWorkerId
+          in: body
+          description: Id of the Twilio worker that took the contact
+          schema:
+            type: string
+            example: WZd3d289370720216aab7e3dc023e80f5f
+        - name: helpline
+          in: body
+          description: Helpline where the contact took place
+          schema:
+            type: string
+            example: Toronto Line
+        - name: number
+          in: body
+          description: Number of the caller for this contact
+          schema:
+            type: string
+            example: '+12025550163'
+        - name: channel
+          in: body
+          description: Channel where this contact took place
+          schema:
+            type: string
+            example: 'web'
+        - name: conversationDuration
+          in: body
+          description: Duration in seconds of this contact
+          schema:
+            type: integer
+            format: int32
+            example: 42
+        - name: accountSid
+          in: body
+          description: Id of the Twilio account that took the contact
+          schema:
+            type: string
+            example: ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        - name: timeOfContact
+          in: body
+          description: Date-time of the contact (EPOCH timestamp)
+          schema:
+            type: integer
+            format: int32
+            example: 1565827981000
+      responses:
+        '200':
+          description: Created contact
+          content:
+              application/json:
+                schema:
+                  allOf:
+                    - $ref: '#/components/schemas/SequelizeRecord'
+                    - $ref: '#/components/schemas/Contact'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
   /contacts/{contactId}/connectToCase:
     put:
       tags:
@@ -268,6 +343,9 @@ components:
         twilioWorkerId:
           type: string
           example: WZd3d289370720216aab7e3dc023e80f5f
+        accountSid:
+          type: string
+          example: ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
         connectedContacts:
           type: array
           items:
@@ -286,6 +364,7 @@ components:
         - channel
         - conversationDuration
         - caseId
+        - timeOfContact
       properties:
         timestamp:
           type: integer
@@ -320,6 +399,13 @@ components:
           type: integer
           format: int32
           example: 1
+        accountSid:
+          type: string
+          example: ACXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+        timeOfContact:
+          type: integer
+          format: int64
+          example: 1565827981000
     Activity:
       type: object
       required:
